      previous change.
    - src/{onmainwindow,sshmasterconnection}.{cpp,h}: correctly initialize and
      finalize libssh. We ought to do both only once - in our main thread.
      Previously, we initialized libssh in a new thread, which might be
      problematic.
    - src/sessionexplorer.cpp: open the correct tab when editing a session
      from the exports menu.
  * x2goclient.spec:
    - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
      issues.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.1.0):
    - Interaction with SSH server (for example for changing
      expired password). Fixes: #592.
    - Fixing setting widget style issue in InteractionDialog on
      Windows client.
    - SSH Interaction for SSH Broker and SSH Server.
    - SSH Iteraction for method keyboard-interactive.
    - Move PulseManager MsgBox functions to main window:
      GUI functions should be used only from main thread.
    - Check "norecord" option on the first start of PulseAudio.
    - Disable/Enable PulseAudio in config dialog.
      New command line options:
      --disable-pulse to disable start of PulseAudio
      --disable-pulse-record to disable audio input.
    - Check if PulseAudio running at session start and resuming
      when sound is enabled. Show warning if PulseAudio not running
      and disable the sound support for the session to avoid
      session freezes.

  [ Robert Parts ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.

  [ Mike DePaulo ]
  * New upstream version (4.1.1.0):
    - Windows: Upgrade PulseAudio from 6.0 to 7.1
      Fixes: #1152 Issues with audio when playing HTML5 videos
    - Windows: Remove uninstaller from start menu.
      It is still available in "Programs and Features".